<resources>
    <string name="app_name">Freifunk Franken</string>
    <string name="tabNextAp">Nächster AP</string>
    <string name="tabSsids">SSIDs</string>
    <string name="tabKarte">Karte</string>
    <string name="tabNews">News</string>
    <string name="btnSsidAdd">Hinzufügen</string>
    <string name="nextApTvStatusLabel">Status:</string>
    <string name="statusOnline">Online</string>
    <string name="statusOffline">Offline</string>
    <string name="menuItemSettings">Einstellungen</string>
    <string name="menuItemAbout">Info</string>
    <string name="menuItemUpdate">Update</string>
    <string name="btnClose">Schließen</string>
    <string name="settingsTvOfflineRouter">Zeige offline Router an</string>
    <string name="settingsTvRouterCount">Anzahl der anzuzeigenden Router</string>
    <string name="count">Anzahl</string>
    <string name="settingsTvNextRouter">Nächste Router</string>
    <string name="settingsSwMapOfflineRouter">Zeige offline Router an</string>
    <string name="settingsTvMap">Karte</string>
    <string name="aboutTvLizences">Lizenzen:</string>
    <string name="aboutTvAppLizence">&lt;ul&gt;
            &lt;li&gt;
                &amp;nbsp;&amp;copy; 2020 Dennis Eisold, lizensiert unter GNU GPLv3&lt;br/&gt;
                &amp;nbsp;Quellcode auf &lt;a href="https://github.com/mcules/FreifunkFrankenApp"&gt;GitHub.com&lt;/a&gt;
            &lt;/li&gt;
            &lt;li&gt;&amp;nbsp;Freifunk Logo von &lt;a href="https://wiki.freifunk.net/Freifunk-Styles#Logo"&gt;freifunk.net&lt;/a&gt; lizenziert unter CC BY-SA 3.0&lt;/li&gt;
        &lt;/ul&gt;</string>
    <string name="aboutTvTitle">Über die Freifunk Franken App</string>
    <string name="newsTvDescription">Meine lange Beschreibung</string>
    <string name="newsTvTitle">Mein Titel</string>
    <string name="newsTvDate">01.01.2020</string>
    <string name="newsArticleRead">Beitrag lesen</string>
    <string name="mapLoading">Lade Karte…</string>
    <string name="dummyText">Text Dummy</string>
    <string name="ssidSuggestionsAddedTitle">SSIDs hinzugefügt</string>
    <string name="ssidSuggestionsAddedDescription">Du solltest gleich (kann ein wenig dauern) eine Benachrichtigung von deinem Gerät erhalten. Bitte bestätige hier die Frage zur Verbindung um das hinzufügen abzuschließen.</string>
    <string name="okay">Okay</string>
    <string name="ssidAddSsidsTitle">SSIDs werden hinzugefügt</string>
    <string name="ssidAddSsidsDescription">Dies kann, je nach Anzahl der SSIDs, eine Weile dauern.</string>
    <string name="errorUrlMalformed">Es wurde eine ungültige URL angegeben.</string>
    <string name="messageDownloadingData">"Lade neue Daten…"</string>
    <string name="messageCheckingDataVersion">Prüfe auf neue Daten…</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tabWiki">Wiki</string>
    <string name="tabVpn">VPN</string>
    <string name="vpnNav">VPN</string>
</resources>
