<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/news_border"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newsTvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/newsTvTitle"
                android:textColor="@android:color/primary_text_light" />

            <TextView
                android:id="@+id/newsTvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newsTvDate"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <TextView
            android:id="@+id/newsTvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/newsTvDescription" />
    </LinearLayout>

</LinearLayout>